[package]
name = "tarp_photogrammetry"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
imageproc = "0.22"
ndarray = "0.15"
linfa = "0.5"
linfa-clustering = "0.5"
rand = "0.8"
uom = "0.31.1"